Dodan Crkvenoslovenski jezik

--- a/Svetosavlje/Web/Svetosavlje/Content/Site.css
+++ b/Svetosavlje/Web/Svetosavlje/Content/Site.css
@@ -7,6 +7,12 @@
  *
  * Designed and built with all the love in the world @twitter by @mdo and @fat.
  */
+.pesme {
+	font-family: Verdana, Arial, Helvetica, sans-serif;
+	font-size: 16px;
+	font-weight: bold;
+    text-align: center;
+}
 article,
 aside,
 details,
