Crkvenoslovenski jezik - skinuo okvir sa glavne

--- a/Svetosavlje/Web/Svetosavlje/Views/Crkvenoslovenski/Index.cshtml
+++ b/Svetosavlje/Web/Svetosavlje/Views/Crkvenoslovenski/Index.cshtml
@@ -16,7 +16,7 @@
         <!-- /uvod, slike otaca-->
     </div>
 
-    <table border="1">
+    <table>
         <tr>
             <td valign="top">
                 <p align="right">&nbsp;</p>
