--- a/Svetosavlje/Web/Svetosavlje/Views/Shared/_Layout.cshtml
+++ b/Svetosavlje/Web/Svetosavlje/Views/Shared/_Layout.cshtml
@@ -61,7 +61,7 @@
                         <li><a href="http://blogs.svetosavlje.org/vesti/" target="_blank">Вести</a></li>
                         <li><a href="http://www.svedokverni.org/" target="_blank">Мисија</a></li>
                         <li id="pojanje">@Html.ActionLink("Појање", "Pojanje", "Home")</li>
-                        <li id="svetinje">@Html.ActionLink("Светиње", "Svetinje", "Home")</li>
+                        <li id="svetinje">@Html.ActionLink("Светиње", "Index", "Svetinje")</li>
                         <li id="riznice">@Html.ActionLink("Ризнице", "Index", "Riznice")</li>
                         <li id="crkvenoslovenski">@Html.ActionLink("Црквенословенски језик", "Index", "Crkvenoslovenski")</li>
                     </ul>
