--- a/Svetosavlje/Web/Svetosavlje/Views/Crkvenoslovenski/Blank.cshtml
+++ b/Svetosavlje/Web/Svetosavlje/Views/Crkvenoslovenski/Blank.cshtml
@@ -7,8 +7,7 @@
     <div class="span12">
         <ul class="breadcrumb">
             <li>@Html.ActionLink("Светосавље.орг", "Index", "Home")<span class="divider">/</span></li>
-            <li>@Html.ActionLink("Светиње", "Index", "Svetinje")<span class="divider">/</span></li>
-            <li>@Html.ActionLink("Ходочашћа", "Hodocasca", "Svetinje")<span class="divider">/</span></li>
+            <li>@Html.ActionLink("Појање", "Index", "Pojanje")<span class="divider">/</span></li>
             <li class="active">xxx</li>
         </ul>
         <!-- /uvod, slike otaca-->
