--- a/Svetosavlje/Web/Svetosavlje/Views/Pojanje/Index.cshtml
+++ b/Svetosavlje/Web/Svetosavlje/Views/Pojanje/Index.cshtml
@@ -2,19 +2,139 @@
     ViewBag.Title = "Појање";
 }
 
-    <div class="row">
-        <!-- Leva kolona -->
-        <div class="span8">
+<div class="row-fluid">
 
-            <h2>Појање</h2>
+    <div class="span12">
+        <img src="~/Content/images/Pojanje/pojanje.jpg" />
 
-        </div>
-
-        <!-- Desna kolona -->
-        <div class="span4">
-
-            Desna kolona, span4
-
-        </div>
-
+        <ul class="breadcrumb">
+            <li>@Html.ActionLink("Светосавље.орг", "Index", "Home")<span class="divider">/</span></li>
+            <li class="active">Појање</li>
+        </ul>
+        <!-- /uvod, slike otaca-->
     </div>
+    <h1>Појање</h1>
+    <br />
+
+
+    <p align="right">&nbsp;</p>
+    <p align="right">
+        "<em>..Ријеч Христова нека обитава у вама богато, 
+       у свакој мудрости учите и уразумљујте себе: псалмима и славопојима и пјесмама 
+       духовним, у благодати пјевајући Господу у срцима својим. И све што год 
+       чините ријечју или дјелом, све чините у име Господа Исуса Христа, захваљујући 
+       Богу Оцу кроз Њега...</em>"<br>
+        <span class="sitno"><em>
+            <br>
+            (Посланица Колошанима 3, 16)</em></span>
+    </p>
+    <p align="left">&nbsp;</p>
+    <p align="right">
+        <img src="~/Content/images/Pojanje/zvono.gif" alt="Звоно, Пећка Патријаршија 1766.г." width="174" height="270" vspace="20" align="right"></p>
+    <ul>
+        <li class="listm1">Димитрије Стефановић<br>
+            <a href="@Url.Action("DStefanovic", "Pojanje")">ЦРКВЕНО ПОЈАЊЕ И ЦРКВЕНА МУЗИКА</a>
+            <p class="sitno">
+                У општем осврту на црквено појање и црквену музику разматран 
+         је текстолошки, музиколошки и историјски приступ. Затим је изнесен поглед 
+         на данашње стање, укључујући проблем у вези са црквеним појањем и црквеном 
+         музиком. Најзад истакнуги су задаци који би унапредили ова два до недавно 
+         веома занемарена вида наше музичке и духовне културе.
+            </p>
+        </li>
+        <li class="listm1">Даница Петровић<br>
+            <a href="@Url.Action("DPetrovic", "Pojanje")">СРПСКО ЦРКВЕНО ПОЈАЊЕ КАО ПРЕДМЕТ<br>
+                МУ3ИКОЛОШКИХ ИСТРАЖИВАЊА</a>
+            <p class="sitno">
+                У тексту је изложен преглед развоја истраживања посвећених 
+         српској православној богослужбеној музици, са освртом на паралелна збивања 
+         у вези са византијским, поствизантијским, руским и бугарским појањем. 
+         Сачињен је попис мелографских записа српског појања, представљен је развојни 
+         ток истраживања новијег "српског народног црквеног појања", 
+         као и средњовековне, неумама бележене, појачке традиције.
+            </p>
+        </li>
+        <li class="listm1">Бранислава Зорица<br>
+            <a href="@Url.Action("Razvitak","Pojanje")">РАЗВИТАК СРПСКОГ ЦРКВЕНОГ ПЈЕВАЊА<br>
+                ОД 14. ДО 18. ВИЈЕКА</a></li>
+        <li class="listm1">Даница Петровић<br>
+            <a href="@Url.Action("XXVek", "Pojanje")">ТРАДИЦИОНАЛНО СРПСКО НАРОДНО ЦРКВЕНО<br>
+                ПОЈАЊЕ У XX ВЕКУ</a><br>
+            <span class="sitno"><em>Пут неговања, замирања, страдања и обнављања</em></span></li>
+    </ul>
+    <p>&nbsp;</p>
+    <table border="0" cellspacing="0" cellpadding="10">
+        <tbody>
+            <tr>
+                <td><a href="http://svetosavlje.org/pojanje/zbornik/index.php">
+                    <img src="~/Content/images/Pojanje/zbornik.jpg" alt="Нотни Зборник" width="288" height="80" border="0"></a></td>
+                <td valign="top">
+                    <p>
+                        НЕНАД М. БАРАЧКИ<br>
+                        <a href="http://svetosavlje.org/pojanje/zbornik/index.php">НОТНИ ЗБОРНИК СРПСКОГ<br>
+                            НАРОДНОГ ЦРКВЕНОГ ПОЈАЊА
+                            <br>
+                            ПО КАРЛОВАЧКОМ НАПЕВУ</a><br>
+                    </p>
+                </td>
+            </tr>
+        </tbody>
+    </table>
+    <p>&nbsp;</p>
+    <p><strong>ЈЕДНОГЛАСНО ВИЗАНТИЈСКО ПОЈАЊЕ</strong></p>
+    <ul>
+        <li class="listm1">КАНОН ЕВХАРИСТИЈЕ [<a href="~/Content/pdfs/Pojanje/vizant01.zip">PDF</a>
+            37kb]</li>
+        <li class="listm1">ИЗОБРАЗИТЕЉНИ ПСАЛАМ [<a href="~/Content/pdfs/Pojanje/vizant02.zip">PDF</a>
+            78kb]</li>
+        <li class="listm1">ФОНТОВИ ЗА ВИЗАНТИЈСКО ПОЈАЊЕ [<a href="~/Content/pdfs/Pojanje/byz_font2.zip">TTF</a>
+            89kb]</li>
+        <li class="listm1">ВЕЛИКА ЈЕКТЕНИЈА, ГЛАС ОСМИ [<a href="~/Content/pdfs/Pojanje/vizant03.zip">PDF</a>
+            26kb]</li>
+    </ul>
+    <p>&nbsp;</p>
+    <p>&nbsp;</p>
+    <p>
+        <strong>о. СРБОЉУБ Милетић:<br>
+            ПРИМЕРИ СРПСКОГ НАРОДНОГ ЦРКВЕНОГ ПОЈАЊА</strong>
+    </p>
+    <ul>
+        <li class="listm1">Литургија Великог Четвртка<br>
+            <a href="http://svetosavlje.org/pojanje/oSrba/Irmos_na_Veliki_Cetvrtak-Stranstvija_oSrba.MP3" target="_blank">Ирмос - Странствија Владичња</a><br>
+            <a href="http://svetosavlje.org/pojanje/oSrba/Veceri_Tvojeja_tajnija_oSrba.MP3" target="_blank">Уместо херувимске песме - Вечери Твојеја тајнија</a><br>
+            <a href="http://svetosavlje.org/pojanje/oSrba/Veceri_Tvojeja_tajnija-krace_oSrba.MP3" target="_blank">Уместо херувимске песме - Вечери Твојеја тајнија - краћа</a></li>
+
+        <li class="listm1">Јутрење Велике Суботе са статијама (примери)<br>
+            <a href="http://svetosavlje.org/pojanje/oSrba/Primer_Statija_1_Stih_1-7_oSrba.MP3" target="_blank">Прва статија - стихови 1-7</a><br>
+            <a href="http://svetosavlje.org/pojanje/oSrba/Primer_Statija_2_Stih_1-18_oSrba.MP3" target="_blank">Друга статија - стихови 1-18</a><br>
+            <a href="http://svetosavlje.org/pojanje/oSrba/Primer_Statija_3_Stih_1-17_oSrba.MP3" target="_blank">Трећа статија - стихови 1-17</a></li>
+
+        <li class="listm1">Литургија Велике Суботе<br>
+            <a href="http://svetosavlje.org/pojanje/oSrba/Velika_Subota-Da_molcit_oSrba.MP3" target="_blank">Уместо херувимске песме - Да молчит</a><br>
+            <a href="http://svetosavlje.org/pojanje/oSrba/Irmos_na_Veliku_Subotu_oSrba.MP3" target="_blank">Ирмос - Не ридај Мене, Мати</a><br>
+            <a href="http://svetosavlje.org/pojanje/oSrba/Velika_Subota-Vosta_jako_spja_oSrba.MP3" target="_blank">Причасно - Воста јако спја Господ</a></li>
+
+        <li class="listm1">Пасха<br>
+            <a href="http://svetosavlje.org/pojanje/oSrba/oSrba_PashalneStihire.MP3" target="_blank">Пасхалне стихире</a><br>
+        </li>
+
+        <li class="listm1">Пређеосвећена Литургија<br>
+            <a href="http://svetosavlje.org/pojanje/oSrba/oSrba_NinjeSili.MP3" target="_blank">Ниње сили</a><br>
+        </li>
+        <li class="listm1">Причастен<br>
+            <a href="http://svetosavlje.org/pojanje/oSrba/oSrba_Pricasten-Hvalite_Glas_ 1.MP3" target="_blank">Хвалите - глас први</a><br>
+            <a href="http://svetosavlje.org/pojanje/oSrba/oSrba_Pricasten-SkaziMiGospodi.MP3" target="_blank">Скажи ми, Господи</a><br>
+        </li>
+
+        <li class="listm1"><a href="http://svetosavlje.org/pojanje/oSrba/Da_ispravitsja-pratnja_oSrba.MP3" target="_blank">Да исправитсја - пратња</a></li>
+        <li class="listm1"><a href="http://svetosavlje.org/pojanje/oSrba/oSrba_StihiraSrpskimSvetiteljima.MP3" target="_blank">Стихира српским светитељима</a></li>
+        <li class="listm1"><a href="http://svetosavlje.org/pojanje/oSrba/Vkusite_oSrba.MP3" target="_blank">Вкусите</a></li>
+        <li class="listm1"><a href="http://svetosavlje.org/pojanje/oSrba/oSrba_IrmosNaPreobrazenje.MP3" target="_blank">Ирмос на Преображење - Рождество твоје нетјено</a></li>
+        <li class="listm1"><a href="http://svetosavlje.org/pojanje/oSrba/oSrba_IrmosNaUspenije.MP3" target="_blank">Ирмос на Успеније - Побјеждајутсја јестества</a></li>
+        <li class="listm1"><a href="http://svetosavlje.org/pojanje/oSrba/oSrba_NeOtvrati-uz_gitaru.MP3" target="_blank">Не отврати лица Твоего - уз гитару</a></li>
+    </ul>
+    <p>&nbsp;</p>
+    <p>&nbsp;</p>
+
+
+</div>
