--- a/Svetosavlje/Web/Svetosavlje/Views/Prolog/Index.cshtml
+++ b/Svetosavlje/Web/Svetosavlje/Views/Prolog/Index.cshtml
@@ -6,8 +6,6 @@
     ViewBag.Title = "Пролог";
 }
 
-<link rel="stylesheet" type="text/css" href="~/Scripts/julian/jquery.calendars.picker.css">
-<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
 <style>
     .underline {
         border-bottom: solid 1px black;
@@ -18,6 +16,7 @@
     }
 </style>
 
+<link rel="stylesheet" type="text/css" href="~/Scripts/julian/jquery.calendars.picker.css">
 @Scripts.Render("~/bundles/julianCalendar")
 
 <script>
@@ -65,7 +64,7 @@
 
     &nbsp;
     <div style="border-bottom: solid 1px black; border-top: solid 1px black; padding: 2px; margin: 2px; background-color: #F0F0F0; font-weight: bold; text-align: center">@Model.Dan
-        @Model.Mjesec @Model.ZitijaLink
+        @Model.Mjesec
     </div>
     @{int i = 0;}
     @foreach (Prolog prolog in Model.Sveti)
