Оквир за Молитве
Оквир за странице Молитви је имплементиран. Слиједи имплементација
читања садржаја из базе. Затим упис и манипулација.

--- a/Svetosavlje/Web/Svetosavlje/Views/Shared/_Layout.cshtml
+++ b/Svetosavlje/Web/Svetosavlje/Views/Shared/_Layout.cshtml
@@ -54,7 +54,7 @@
                         <li id="home">@Html.ActionLink("Светосавље.орг", "Index", "Home")</li>
                         <li id="pastir">@Html.ActionLink("Питање пастиру", "Index", "Pastir")</li>
                         <li id="prolog">@Html.ActionLink("Пролог", "Index", "Prolog")</li>
-                        <li id="molitve">@Html.ActionLink("Молитве", "Molitve", "Home")</li>
+                        <li id="molitve">@Html.ActionLink("Молитве", "Index", "Molitve")</li>
                         <li id="lista">@Html.ActionLink("Листа", "Index", "Lista")</li>
                         <li id="biblioteka">@Html.ActionLink("Библиотека", "Biblioteka", "Home")</li>
                         <li><a href="http://blogs.svetosavlje.org/vesti/" target="_blank">Вести</a></li>
